--- a/src/app/componentes/modal-user/modal-user.component.html
+++ b/src/app/componentes/modal-user/modal-user.component.html
@@ -12,10 +12,10 @@
             <div class="modal-body text-center">
                 <label for="usuario">Usuario: </label>
                 <input type="text" name="usuario" [(ngModel)]="usuario" value="{{usuarioPlaceHolder}}"><br>
-                <label for="usuario">Contraseña: </label>
+                <label for="contraseña">Contraseña: </label>
                 <input type="text" name="Contraseña" [(ngModel)]="contraseña" value="{{contraseñaPlaceHolder}}"><br>
-                <label for="usuario">Habilitar: </label>
-                <input type="text" name="Habilitar" [(ngModel)]="Habilitar" value="{{habilitadoPlaceHolder}}">
+                <label for="habilitar">Habilitar: </label>
+                <input type="text" name="Habilitar" [(ngModel)]="habilitar" value="{{habilitadoPlaceHolder}}">
                 <label for="rol">Roles: </label>
                 <select [(ngModel)]="rol">
                     <option value="0">Seleccione rol...</option>
