--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -37,7 +37,7 @@
         <p class="text-center text-body-secondary">© 2023 PortalentoDigital, Inc</p>
     </footer> -->
 
-<div class="container-fluid ">
+<div class="container-fluid fixed-bottom">
     <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="col-xs-12 pt-3">
-            <p class="text-white text-center">Copyright © -<em>Portalento-Digital</em> 2023</p>
+            <p class="text-white text-center">Copyright © <em>Portalento-Digital</em> 2023</p>
         </div>
 
     </div>
