--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,19 +14,19 @@
   <li class="nav-item">
 
     <div class="btn-group">
-      <button type="button" class="btn btn-success w-100">Cambiar de Cuenta</button>
-
-      <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+ 
+      <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
+        Cambiar de Cuenta
         <span class="caret"></span>
         <span class="sr-only"></span>
       </button>
 
-      <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Cuenta 1</a></li>
-        <li><a href="#">Cuenta 2</a></li>
-        <li><a href="#">Cuenta 3</a></li>
-        <li class="divider"></li>
-        <li><a href="#">Cuenta 4</a></li>
+      <ul class="dropdown-menu">
+        <li><a href="https://www.ing.es/cuentas-ing" class="dropdown-item">Cuentas</a></li>
+        <li><a href="#" class="dropdown-item">Cuenta Nómina</a></li>
+        <li><a href="#" class="dropdown-item">Cuenta NoCuenta</a></li>
+        <li><a href="#" class="dropdown-item">Plan Amigo</a></li>
+        
       </ul>
     </div>
   </li>
