--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -10,12 +10,12 @@
       <tr *ngFor="let element of elements">
         <td><img [src]="getImage(element.image)" alt="{{ element.description }}"></td>
         <td> {{ element.description }} </td>
-        <td> {{ element.price }} </td>
+        <td> {{ getFormat(element.price) }} </td>
         <td> {{ element.stock }} </td>
 
         <td>
-          <a (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), 'edit', element)"><i class="bi bi-pencil-fill"></i></a>
-          <a (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
+          <a class="cursor-pointer" (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), 'edit', element)"><i class="bi bi-pencil-fill"></i></a>
+          <a class="cursor-pointer" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
         </td>
       </tr>
     </table>
@@ -25,7 +25,7 @@
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
-      <button type="button" class="btn btn-primary" (click)="abrirModal('','add')">Añadir nuevo producto</button>
+      <button type="button" class="btn btn-primary" (click)="abrirModal('','add','')">Añadir nuevo producto</button>
     </div>
     <app-modal-existing-products #modal></app-modal-existing-products>
   </div>
