--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -1,4 +1,3 @@
-
 <!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog">
@@ -17,8 +16,8 @@
                   <img [src]="getImage(image)" [alt]="description" style="width:250px; height:250px;" class="mb-3" id="setImage"><br>
                   <!--<button (click)="fileUpload()" class="text-primary text-decoration-none btn btn-link">Editar imagen</button>-->
 
-                  <label for="file-input" class="text-primary text-decoration-none btn btn-link">Editar imagen</label>
-                  <input type="file" (change)="fileUpload($event)" style="display: none;" id="file-input" accept=".jpg, .png">
+                  <label for="file-input" class="text-primary text-decoration-none">Editar imagen</label>
+                  <input type="file" (change)="fileUpload($event)" style="display: none;"  id="file-input" accept=".jpg, .png">
                 </div>
                 <div class="input-group mb-2">
                     <span class="input-group-text" style="width:135px" id="basic-addon1">Descripción</span>
@@ -27,7 +26,7 @@
 
                 <div class="input-group mb-2">
                     <span class="input-group-text" id="basic-addon1" style="width:135px">Precio de venta</span>
-                    <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="price" [value]="price">
+                    <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="saleprice" [value]="saleprice">
                     <span class="input-group-text">€</span>
                 </div>
 
@@ -36,7 +35,7 @@
                     <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-3 mt-3">
                   <p class="fw-bold h4 d-block text-end" style="color:#4e4e4e">Total {{ total }}</p>
               </div>
             </div>
@@ -55,3 +54,4 @@
         </div>
     </div>
 </div>
+  
