--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -8,8 +8,7 @@
     <label for="apellidos">Apellidos:</label>
     <input type="text" id="apellidos" [(ngModel)]="secondName" required [ngModelOptions]="{standalone: true}">
     
-    <label for="documentodeidentidad">Documento de Identidad:</label>
-    <input type="text" id="documentodeidentidad" [(ngModel)]="identification" required [ngModelOptions]="{standalone: true}">
+   
     
     <label for="telefono">Teléfono:</label>
     <input type="text" id="telefono" [(ngModel)]="phone" required [ngModelOptions]="{standalone: true}">
@@ -17,13 +16,14 @@
     <label for="email">Email:</label>
     <input type="email" id="email" [(ngModel)]="email" required [ngModelOptions]="{standalone: true}">
 
-    <label for="tipoDeDocumento">Tipo de Documento:</label>
+    
     <select [(ngModel)]="identificationType" [ngModelOptions]="{standalone: true}" name="identificationType">
-      <option value="0">Seleccion Tipo de Identificador....</option>
+      <option value="0">Seleccione Documento....</option>
       <option value="identificationType._links.self.href.substring(identificationType._links.self.href.lastIndexOf('/')+1)"
        *ngFor="let identificationType of identificationTypes">{{identificationType.description}}</option>
-
     </select>
+    <label for="documentodeidentidad">NºDocmento:</label>
+    <input type="text" id="documentodeidentidad" [(ngModel)]="identification" required [ngModelOptions]="{standalone: true}">
     
     <label for="usuario">Usuario:</label>
     <input type="text" id="usuario" [(ngModel)]="user" required [ngModelOptions]="{standalone: true}">
