--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -83,6 +83,6 @@
   <div class="container-fluid p-5 text-white text-center texto-resaltado">
     <h1>LA QUIERES YA</h1>
     <h2>en menos de diez minutos lo puedes hacer!</h2>
-    <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+    <a class="btn btn-light btn-lg"  role="button" routerLink="/app-hazte-cliente">¡Hazte Cliente!</a>
   </div>
 </div>
