--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -3,6 +3,13 @@
     <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="usuarios">Usuarios</a>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" routerLink="usuarios">Dropdown</a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Rol 1</a></li>
+        <li><a class="dropdown-item" href="#">Rol 2</a></li>
+        <li><a class="dropdown-item" href="#">Rol 3</a></li>
+      </ul>
     <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="categorias">Categorias</a>
     </li>
