--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link active bg-dark text-white" routerLink="usuarios">Usuarios</a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" routerLink="usuarios">Dropdown</a>
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" routerLink="usuarios">Roles</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Rol 1</a></li>
       </ul>
