--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,12 +1,3 @@
-<app-user></app-user>
-
-
-<app-hazte-cliente></app-hazte-cliente>
-
-
-
-
-
 
 <div class="container fondo-secundario">
   <div class="container">
@@ -83,6 +74,6 @@
   <div class="container-fluid p-5 text-white text-center texto-resaltado">
     <h1>LA QUIERES YA</h1>
     <h2>en menos de diez minutos lo puedes hacer!</h2>
-    <a class="btn btn-light btn-lg"  role="button" routerLink="/app-hazte-cliente">¡Hazte Cliente!</a>
+    <a class="btn btn-light btn-lg"  role="button"routerLink="haztecliente">¡Hazte Cliente!</a>
   </div>
 </div>
