añadiendo al routing cardtype y document

--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -24,4 +24,10 @@
   <li class="nav-item">
     <a class="nav-link active bg-dark text-white" routerLink="conf">Configuración</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link active bg-dark text-white" routerLink="tipoDocumentos">Tipos de documentos</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active bg-dark text-white" routerLink="tipoTarjetas">Tipos de tarjetas</a>
+  </li>
   </ul>
