añadir routing document y card type

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-<div>cosas</div>
-   <!--<app-login></app-login>-->
+<div><h1>LA COLCHA DE TU MADRE</h1></div>
+   
   <app-nav></app-nav>  
 </header>
