--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 
 <div class="container fondo-secundario">
   <div class="container">
-    <section class="jumbotron text-center text-white texto-resaltado">
+    <section class=" text-center text-white texto-resaltado">
       <div class="container">
         <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
         <p class="lead">EL BANCO QUE VELA POR TUS INTERESES, NO EL QUE TE LOS COBRA</p>
@@ -74,6 +74,6 @@
   <div class="container-fluid p-5 text-white text-center texto-resaltado">
     <h1>LA QUIERES YA</h1>
     <h2>en menos de diez minutos lo puedes hacer!</h2>
-    <a class="btn btn-light btn-lg"  role="button"routerLink="haztecliente">¡Hazte Cliente!</a>
+    <button class="btn btn-light btn-lg"  role="button">¡Hazte Cliente!</button>
   </div>
 </div>
