--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -25,7 +25,7 @@
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
-      <button type="button" class="btn btn-primary" (click)="abrirModal('','add','')">Añadir nuevo producto</button>
+      <button type="button" class="btn btn-primary" (click)="abrirModal('','add','')" data-bs-toggle="modal">Añadir nuevo producto</button>
     </div>
     <app-modal-existing-products #modal></app-modal-existing-products>
   </div>
