--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -13,25 +13,25 @@
             <div class="modal-body text-center">
                 <div class="mb-3">
 
-                  <img [src]="getImage(image)" [alt]="description" style="width:250px; height:250px;" class="mb-3" id="setImage"><br>
+                  <img [src]="getImage(image)" [alt]="description" class="rounded" style="width:250px; height:250px;" class="mb-3" id="setImage"><br>
                   <!--<button (click)="fileUpload()" class="text-primary text-decoration-none btn btn-link">Editar imagen</button>-->
 
                   <label for="file-input" class="text-primary text-decoration-none">Editar imagen</label>
-                  <input type="file" (change)="fileUpload($event)" style="display: none;"  id="file-input" accept=".jpg, .png">
+                  <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif" >
                 </div>
                 <div class="input-group mb-2">
-                    <span class="input-group-text" style="width:135px" id="basic-addon1">Descripción</span>
+                    <span class="input-group-text" id="basic-addon1">Descripción</span>
                     <input type="text" class="form-control" aria-label="Descripción" aria-describedby="Descripción" [(ngModel)]="description" [value]="description">
                 </div>
 
                 <div class="input-group mb-2">
-                    <span class="input-group-text" id="basic-addon1" style="width:135px">Precio de venta</span>
+                    <span class="input-group-text" id="basic-addon1">Precio de venta</span>
                     <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="saleprice" [value]="saleprice">
                     <span class="input-group-text">€</span>
                 </div>
 
                 <div class="input-group mb-2">
-                    <span class="input-group-text" id="basic-addon1" style="width:135px">Existencias</span>
+                    <span class="input-group-text" id="basic-addon1">Existencias</span>
                     <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock">
                 </div>
 
@@ -41,17 +41,16 @@
             </div>
 
             <div class="text-center">
-                <h1>{{ message }}</h1>
+                <p>{{ message }}</p>
             </div>
 
             <!-- Modal footer -->
             <div class="modal-footer">
                 <div class="d-grid gap-2 d-md-block">
-                    <button class="btn btn-secondary m-3" type="button" (click)="close()">Cancelar</button>
+                    <button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal">Cancelar</button>
                     <button class="btn btn-primary" type="button" (click)="saveData(id)">Aceptar</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-  
