--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -14,8 +14,8 @@
         <td> {{ element.stock }} </td>
 
         <td>
-          <a class="cursor-pointer" (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), 'edit', element)"><i class="bi bi-pencil-fill"></i></a>
-          <a class="cursor-pointer" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
+          <a (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element)" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil-fill"></i></a>
+          <a class="wbtn" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash3-fill"></i></a>
         </td>
       </tr>
     </table>
@@ -25,7 +25,9 @@
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
-      <button type="button" class="btn btn-primary" (click)="abrirModal('','add','')" data-bs-toggle="modal">Añadir nuevo producto</button>
+      <button type="button" class="btn btn-primary" (click)="abrirModal('','')" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>
+      <!--<button type="button" class="btn btn-primary" data-bs-click="abrirModal('','')" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>-->
     </div>
+
     <app-modal-existing-products #modal></app-modal-existing-products>
   </div>
