--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -1,56 +1,43 @@
-<!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog">
         <div class="modal-content">
-
-            <!-- Modal Header -->
             <div class="modal-header justify-content-left">
-                <h5 class="modal-title ">Datos del producto</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title">Datos del producto</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-
-            <!-- Modal body -->
             <div class="modal-body text-center">
-                <div class="mb-3">
-
-                  <img [src]="getImage(image)" [alt]="description" class="rounded" style="width:250px; height:250px;" class="mb-3" id="setImage"><br>
-                  <!--<button (click)="fileUpload()" class="text-primary text-decoration-none btn btn-link">Editar imagen</button>-->
-
-                  <label for="file-input" class="text-primary text-decoration-none">Editar imagen</label>
-                  <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif" >
-                </div>
-                <div class="input-group mb-2">
-                    <span class="input-group-text" id="basic-addon1">Descripción</span>
-                    <input type="text" class="form-control" aria-label="Descripción" aria-describedby="Descripción" [(ngModel)]="description" [value]="description">
-                </div>
-
-                <div class="input-group mb-2">
-                    <span class="input-group-text" id="basic-addon1">Precio de venta</span>
-                    <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="saleprice" [value]="saleprice">
-                    <span class="input-group-text">€</span>
-                </div>
-
-                <div class="input-group mb-2">
-                    <span class="input-group-text" id="basic-addon1">Existencias</span>
-                    <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock">
-                </div>
-
-                <div class="mb-3 mt-3">
-                  <p class="fw-bold h4 d-block text-end" style="color:#4e4e4e">Total {{ total }}</p>
-              </div>
+            <div class="mb-3">
+                <img [src]="getImage(image)" [alt]="description" class="rounded mb-3 img-size" id="setImage"><br>
+                <label for="file-input" class="text-primary text-decoration-none">Editar imagen</label>
+                <input type="file" (change)="fileUpload($event)" class="d-none" id="file-input" accept=".jpg, .png, .gif">
             </div>
-
+            <div class="input-group mb-2">
+                <span class="input-group-text spw-3" id="basic-addon1">Descripción</span>
+                <input type="text" class="form-control" aria-label="Descripción" aria-describedby="Descripción" [(ngModel)]="description" [value]="description">
+            </div>
+            <div class="input-group mb-2">
+                <span class="input-group-text spw-3" id="basic-addon1">Precio de venta</span>
+                <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="saleprice" [value]="saleprice">
+                <span class="input-group-text">€</span>
+            </div>
+            <div class="input-group mb-2">
+                <span class="input-group-text spw-3" id="basic-addon1">Existencias</span>
+                <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock">
+            </div>
+            <div class="mb-3 mt-3">
+                <p class="fw-bold h4 d-block text-end" style="color:#4e4e4e">Total {{ total }}</p>
+            </div>
+            </div>
             <div class="text-center">
-                <p>{{ message }}</p>
+            <p>{{ message }}</p>
             </div>
-
-            <!-- Modal footer -->
             <div class="modal-footer">
-                <div class="d-grid gap-2 d-md-block">
-                    <button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal">Cancelar</button>
-                    <button class="btn btn-primary" type="button" (click)="saveData(id)">Aceptar</button>
-                </div>
+            <div class="d-grid gap-2 d-md-block">
+                <button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal">Cerrar</button>
+                <button class="btn btn-primary" type="button" (click)="saveData()">Aceptar</button>
             </div>
-        </div>
+            </div>
+      </div>
     </div>
 </div>
+  
