--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -44,8 +44,8 @@
         (click)="colorearBotonLoginAlPulsar()">Acceso</button>
 </div>
 <div *ngIf="logado">
-    <button class="btnHazteCliente">Hola {{usuario}}</button>
-    <button class="btnLogin texto-primario" type="button" (click)="cerrarSesion()">Salir</button>
+    <button class="btnHazteCliente">Hola {{user}}</button>
+    <button class="btnLogin texto-primario" type="button" (click)="closeSession()">Salir</button>
 </div>
 
 <div *ngIf="!logado" class="zonaColapsable collapse" id="zonaColapsableLogin">
@@ -53,10 +53,10 @@
 
         <div class="contenedorLogin">
             <div class="formularioLogin">
-                <h2>Soy cliente</h2>
+                <h2>nuevo Usuario</h2>
                 <form action="#" method="post" spellcheck="false">
                     <div class="inputCasilla">
-                        <input type="text" required [(ngModel)]="inputUsuario" name="inputUsuario" id="inputU">
+                        <input type="text" required [(ngModel)]="inputUser" name="inputUsuario" id="inputU">
                         <label>Usuario</label>
                     </div>
                     <div class="inputCasilla">
@@ -75,9 +75,9 @@
         </div>
         <div class="infoLogin">
             <div class="contenido">
-                <div *ngIf="cladveIncorrecta; else mensaje" class="alert alert-danger">
+                <div *ngIf="incorrectKey; else mensaje" class="alert alert-danger">
                     <p class="mt-2">
-                        {{mensajeClave}}</p>
+                        {{keyMessage}}</p>
                 </div>
                 <ng-template #mensaje>
                     <p class="mt-2">
