--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -1,33 +1,37 @@
 <nav>
   <ul class="nav nav-pills nav-justified bg-dark">
     <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="home">Home</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="usuarios">Usuarios</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link active bg-dark text-white" routerLink="roles">Roles</a>
     </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="categorias">Categorias</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="subcategorias">Subcategorias</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="productos">Productos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="proveedores">Proveedores</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="fidelidad">Fidelidad</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="conf">Configuración</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="tipoDocumentos">Tipos de documentos</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active bg-dark text-white" routerLink="tipoTarjetas">Tipos de tarjetas</a>
-  </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="categorias">Categorias</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="subcategorias">Subcategorias</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="productos">Productos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="proveedores">Proveedores</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="fidelidad">Fidelidad</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="conf">Configuración</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="tipoDocumentos">Tipos de documentos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" routerLink="tipoTarjetas">Tipos de tarjetas</a>
+    </li>
+
   </ul>
