--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,6 @@
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
->>>>>>> feature/front/proyectos-banco-op
-
-<body class="green-background">
-    <footer class="footer">
+    <footer class="footer bg-success">
         <div class="container ">
             <div class="footer-content">
                 <div class="footer-column">
@@ -57,4 +52,4 @@
             </div>
         </div>
     </footer>
-</body>
+
