--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -14,7 +14,7 @@
             <td class="text-center">{{usuario.user}}</td>
             <td class="text-center">{{clave.password}}</td>
             <td class="text-center">{{habilitado.enabled}}</td>
-            <td class="text-center">{{rol.rol}}</td>
+            <td class="text-center">{{rol.roles}}</td>
             <td class="text-center">
                 <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal"> 
                     <i class="bi bi-pencil-fill"></i> </a>
