--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- <div>
-    <footer class="py-1 text-bg-dark ">
+    <footer class=" bg-dark ">
 
         <div class="col-md-5 offset-md-6 ">
             <form>
@@ -37,7 +37,7 @@
         <p class="text-center text-body-secondary">© 2023 PortalentoDigital, Inc</p>
     </footer> -->
 
-<div class="container-fluid fixed-bottom">
+<footer class="footer">
     <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>
@@ -85,4 +85,4 @@
         </div>
 
     </div>
-</div>
+</footer>
