--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid fixed-bottom">
-    <div class="row p-3 pb-1 bg-dark text-white">
+    <div class="row p-3 pb-1 bg-warning text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
-            <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>
-            <p >Madrid, Lavapies</p>
+            <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>           
+                <p class="fas fa-home me-3">Madrid, Lavapies</p>           
         </div>
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h6 mb-2">PRODUCTOS</p>
