--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -10,7 +10,7 @@
       <tr *ngFor="let element of elements">
         <td><img [src]="getImage(element.image)" alt="{{ element.description }}"></td>
         <td> {{ element.description }} </td>
-        <td> {{ getFormat(element.price) }} </td>
+        <td> {{ getFormatterEuro(element.price) }} </td>
         <td> {{ element.stock }} </td>
 
         <td>
@@ -20,8 +20,7 @@
       </tr>
     </table>
 
-    <!--<app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>
-    <h5 class="text-center">{{mensaje}}</h5>-->
+
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
